[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
spin = "0.9"
x86_64 = "0.15"
uart_16550 = "0.3"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 120
